--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ derive_more = "0.99.16"
 nom = "7.0.0"
 structopt = "0.3.25"
 thiserror = "1.0.30"
+tinytemplate = "1.2.1"
+serde = { version = "1.0", features = ["derive"] }
